# llm-news-paper-trader

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: events.toml  schedule.toml  source_registry.toml  sources.toml  tickers.toml  trading.toml
prompts/: codex_classifier.md  event_extraction.md  trade_decision.md
scripts/: codex_collect.ps1  codex_execute.ps1  market_status.ps1  report.ps1  review.ps1  run_loop.ps1  run_once.ps1
src/news_trader/: codex_handoff.py  config.py  env.py  main.py  market_hours.py  pipeline.py  storage.py
src/news_trader/llm/: client.py  schema.py
src/news_trader/reports/: final_report.py  performance_review.py
src/news_trader/signals/: __init__.py  adaptive.py  derisk.py  dip.py  risk.py  scoring.py
src/news_trader/sources/: event_calendar.py  http.py  market_data.py  registry.py  sec_edgar.py  yahoo_rss.py
src/news_trader/trading/: paper_broker.py  portfolio.py
tests/: test_broker.py  test_derisk.py  test_market_hours.py  test_schema.py  test_scoring.py
